<resources>
    <string name="app_name">calculadoraPractica</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="porcentajehome">%</string>
    <string name="cerohome">0</string>
    <string name="puntohome">.</string>
    <string name="unohome">1</string>
    <string name="doshome">2</string>
    <string name="treshome">3</string>
    <string name="cuatrohome">4</string>
    <string name="cincohome">5</string>
    <string name="seishome">6</string>
    <string name="sietehome">7</string>
    <string name="ochohome">8</string>
    <string name="nuevehome">9</string>
    <string name="achome">AC</string>
    <string name="sumahome">+</string>
    <string name="restahome">-</string>
    <string name="multiplicacionhome">x</string>
    <string name="divisionhome">/</string>
    <string name="igualhome">=</string>
    <string name="borrarhome">BR</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
</resources>
